# genius_vk_bot2

./: Procfile  README.md  bot.py  keep_alive.py  pyproject.toml  requirements.txt
