[tool.poetry]
name = "geniusvkbot2"
version = "0.1.0"
description = ""
authors = ["Daniel Khromov <danielkhromov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
vk-api = "^11.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
